# code-vm

./: .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  LICENSE  LICENSE.md  README.md  SECURITY.md  account.txt  package-lock.json  package.json  tsconfig.json
api/: Cargo.toml
api/src/: consts.rs  cpis.rs  helpers.rs  instruction.rs  lib.rs  opcode.rs  pdas.rs  sdk.rs  state.rs
api/src/cvm/: changelog.rs  mod.rs  pool.rs
api/src/cvm/account/: mod.rs  nonce.rs  relay.rs  timelock.rs  virtual_account.rs
api/src/cvm/memory/: allocator.rs  mod.rs  paged.rs  paged_item.rs  sector.rs  simple.rs
api/src/cvm/messages/: airdrop.rs  mod.rs  transfer.rs  withdraw.rs
api/src/cvm/state/: memory.rs  mod.rs  relay.rs  storage.rs  unlock.rs  vm.rs  withdraw.rs
api/src/types/: circular_buffer.rs  hash.rs  merkle_tree.rs  mod.rs  signature.rs  slice_allocator.rs  zero_copy.rs
api/src/utils/: hash.rs  signature.rs
idl/: Makefile  README.md  code_vm.accounts.hexpat  code_vm.hexpat  code_vm.instructions.hexpat  code_vm.json
idl/src/: Anchor.toml  package-lock.json  package.json  tsconfig.json
idl/src/programs/code-vm/: Cargo.toml
idl/src/programs/code-vm/src/: args.rs  consts.rs  instructions.rs  lib.rs  state.rs  types.rs
idl/src/scripts/: update-discriminators.ts
idl/src/tests/: idl.test.ts  vm.test.ts
program/: Cargo.toml  build.rs
program/src/: lib.rs  security.rs
program/src/instruction/: compress.rs  decompress.rs  deposit.rs  exec.rs  init_memory.rs  init_nonce.rs  init_relay.rs  init_storage.rs  init_timelock.rs  init_unlock.rs  init_vm.rs  mod.rs  resize.rs  snapshot.rs  swap.rs  unlock.rs  withdraw.rs
program/src/opcode/: airdrop.rs  conditional_transfer.rs  external_relay.rs  external_transfer.rs  external_withdraw.rs  mod.rs  relay.rs  transfer.rs  withdraw.rs
program/tests/: relay_init.rs  relay_save_root.rs  relay_transfer.rs  swap.rs  system_compress.rs  system_decompress.rs  system_nonce_init.rs  system_timelock_init.rs  timelock_deposit.rs  timelock_unlock.rs  timelock_withdraw.rs  vm_exec.rs  vm_exec_airdrop.rs  vm_init.rs  vm_legacy_mem.rs  vm_memory_init.rs  vm_memory_resize.rs  vm_storage_init.rs
program/tests/utils/: context.rs  mod.rs  state.rs  svm.rs
programs/code-vm/: Cargo.toml
programs/code-vm/src/: error.rs  lib.rs  macros.rs
programs/code-vm/src/cvm/: changelog.rs  mod.rs  pool.rs  relay.rs  state.rs  storage.rs  unlock.rs
programs/code-vm/src/cvm/account/: memory.rs  mod.rs  nonce_account.rs  relay_account.rs  timelock_account.rs  virtual_account.rs
programs/code-vm/src/cvm/memory/: mod.rs  page.rs  paged_memory.rs  sector.rs
programs/code-vm/src/cvm/opcode/: mod.rs
programs/code-vm/src/cvm/opcode/relay/: mod.rs  transfer_to_external.rs  transfer_to_internal.rs
programs/code-vm/src/cvm/opcode/timelock/: mod.rs  transfer_to_external.rs  transfer_to_internal.rs  transfer_to_relay.rs  withdraw_to_external.rs  withdraw_to_internal.rs
programs/code-vm/src/cvm/processor/: exec.rs  mod.rs  vm.rs
programs/code-vm/src/instructions/: mod.rs
programs/code-vm/src/instructions/relay/: mod.rs  relay_init.rs  relay_save_root.rs
programs/code-vm/src/instructions/system/: mod.rs  system_account_compress.rs  system_account_decompress.rs  system_nonce_init.rs  system_timelock_init.rs
programs/code-vm/src/instructions/timelock/: mod.rs  timelock_deposit_from_ata.rs  timelock_deposit_from_pda.rs  timelock_unlock_finalize.rs  timelock_unlock_init.rs  timelock_unlock_request.rs  timelock_withdraw_from_deposit.rs  timelock_withdraw_from_memory.rs  timelock_withdraw_from_storage.rs
programs/code-vm/src/instructions/vm/: mod.rs  vm_exec.rs  vm_init.rs  vm_memory_init.rs  vm_memory_resize.rs  vm_storage_init.rs
programs/code-vm/src/types/: circular_buffer.rs  fixed_size.rs  hash.rs  merkle_tree.rs  mod.rs  signature.rs  zero_copy.rs
programs/code-vm/src/utils/: hash.rs  memo.rs  mod.rs  pda.rs  signature.rs  transaction.rs
programs/code-vm/tests/: vm-init.rs
programs/code-vm/tests/utils/: context.rs  mod.rs  spl.rs
tests/: env.ts  vm.test.ts
tests/instructions/: index.ts  relay.ts  system.ts  timelock.ts  vm.ts
tests/memory/: accounts.ts  allocator.ts  index.ts  page.ts  sector.ts  state.ts
tests/utils/: env.ts  exec.ts  hash.ts  lut.ts  memory.ts  merkle-tree.ts  nonce.ts  opcode.ts  payment.ts  relay.ts  storage.ts  transaction.ts  user.ts  vm.ts
