[workspace]
resolver = "2"
members = ["api", "program"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = ""
documentation = ""
respository = ""
readme = "./README.md"
keywords = ["solana"]

[workspace.dependencies]
code-vm-api = { path = "./api", version = "0.1.0" }
borsh = "0.10.3"
bs58 = "0.4.0"
bytemuck = "1.14"
num_enum = "0.7"
sha2 = "0.10.8"
solana-ed25519-sha512 = { version = "0.1.2" }
curve25519-dalek = { version = "4.1.3", default-features = false, features = ["zeroize"] }
solana-curve25519 = "2.0.13"
solana-program = "1.18"
spl-associated-token-account = { version = "^2.3", features = [ "no-entrypoint" ] } 
spl-token = { version = "^4", features = ["no-entrypoint"] }
steel = { version = "1.3", features = ["spl"] }
thiserror = "1.0"
