[package]
name = "code-vm-api"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck.workspace = true
num_enum.workspace = true
solana-program.workspace = true
steel.workspace = true
thiserror.workspace = true
spl-token.workspace = true
borsh.workspace = true
bs58.workspace = true
sha2.workspace = true
solana-curve25519.workspace = true
curve25519-dalek.workspace = true
solana-ed25519-sha512.workspace = true

[dev-dependencies]
solana-sdk = "1.18"