[package]
name = "code-vm-program"
description = "Purpose built VM for reduced fees on Solana"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-sbf = []

[dependencies]
code-vm-api.workspace = true
solana-program.workspace = true
steel.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true

[dev-dependencies]
rand = "0.8.5"
solana-sdk = "1.18"
litesvm = "0.2.1"
litesvm-token = "0.2.1"
base64 = "0.13.0"
pretty-hex = "0.4.1"
