[package]
name = "code-vm"
version = "0.1.0"
description = "Program for executing virtual Code app transactions on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "code_vm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-sbf = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]

[dependencies]
curve25519-dalek = { version = "4.1.3", default-features = false, features = ["zeroize"] }
bs58 = "0.4.0"
base64 = "0.13.0"
sha2 = "0.10.8"
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
bincode = "1.3.3"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"]}
splitter = { version = "0.1.0", path = "../../external/splitter" }
timelock = { version = "0.1.0", path = "../../external/timelock" }

[dev-dependencies]
async-trait = "0.1.71"
solana-sdk = "1.18.11"
rand = "0.8.5"
litesvm = "0.1.0"

