[package]
name = "code-vm"
version = "0.1.0"
description = "Code VM"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "code_vm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
